# Nevermind-Lang

./: .gitignore  BUILD.md  CHANGELOG.md  COMPILER_ARCHITECTURE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DAILY_REPORT_2025-01-08.md  DEMO_REPORT.md  DESIGN_SPEC.md  DEVELOPER_HANDOFF.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  PARSER_FIX_PROGRESS.md  PARSER_FIX_SUMMARY.md  PARSER_TEST_REPORT.md  PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  RUNTIME_DESIGN.md  STANDARD_LIBRARY.md  SUMMARY.md  TOOLCHAIN.md  TYPE_SYSTEM_DESIGN.md  test.nvm  test.py  tmpclaude-8432-cwd
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/ast/: Cargo.toml
crates/ast/src/: expr.rs  lib.rs  op.rs  pattern.rs  stmt.rs  types.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: emit.rs  lib.rs  python.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  source.rs  span.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  token.rs
crates/lexer/tests/: lexer_tests.rs
crates/mir/: Cargo.toml
crates/mir/src/: expr.rs  function.rs  lib.rs  lowering.rs  pattern.rs  stmt.rs
crates/name-resolver/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/name-resolver/src/: error.rs  lib.rs  resolver.rs  scope.rs  symbol.rs  symbol_table.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  expr_parser.rs  lib.rs  parser.rs  pattern_parser.rs
crates/parser/tests/: parser_tests.rs
crates/type-checker/: Cargo.toml  README.md
crates/type-checker/src/: checker.rs  environment.rs  error.rs  lib.rs  ty.rs  types.rs  unification.rs
docs/: ARCHIVE.md  RELEASE_CHECKLIST_1_0.md  RUNTIME_CONTRACT.md  STABLE_BOUNDARY.md
docs/archive/: PARALLEL_AGENT_SUMMARY.md  PARSER_FIX_PROGRESS.md
examples/: binary_search.nm  brainfuck_simple.nm  bubble_sort.nm  circ_queue.nm  complex.nm  divide_conquer.nm  feasibility.nm  functions.nm  generalized_list.nm  greet.nm  hello.nm  insertion_sort.nm  linked_list.nm  lists.nm  math.nm  mathutils.nm  merge_sort.nm  modules.nm  mst_kruskal.nm  multi_key_radix_sort.nm  patterns.nm  quick_sort.nm  radix_sort.nm  seq_list.nm  seq_stack.nm  shell_sort.nm  simple.nm  simple_fn.nm  sparse_matrix.nm  sparse_poly.nm  test_call.nm  test_call2.nm  test_call3.nm  test_call4.nm  test_complex.nm  test_control.nm  test_fn.nm  test_fn_if.nm  test_for.nm  test_if.nm  (+8 more)
examples/docs/: MATRIX_CHAIN_DP.md  TURING_COMPLETE.md
src/: formatting.rs  linting.rs  main.rs
tests/: cli_runtime_modules.rs  compile_tests.rs  edge_cases.rs  runtime_data_structures.rs
