[package]
name = "nevermind"
version = "0.1.0"
edition = "2021"
description = "The Nevermind Programming Language - Zero Cognitive Friction"
authors = ["The Nevermind Project"]
license = "MIT"
repository = "https://github.com/nevermind-lang/nevermind"
readme = "README.md"
keywords = ["programming-language", "compiler", "python-interop"]
categories = ["compilers"]

[workspace]
members = [
    "crates/lexer",
    "crates/parser",
    "crates/ast",
    "crates/common",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
criterion = "0.5"

# Dev dependencies
pretty_assertions = "1.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
