[package]
name = "nevermind-mir"
version = "0.1.0"
edition = "2021"
description = "Mid-level Intermediate Representation for Nevermind compiler"

[dependencies]
# Local crates
nevermind-common = { path = "../common" }
nevermind-ast = { path = "../ast" }
nevermind-type-checker = { path = "../type-checker" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"